--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -56,15 +56,15 @@ div {
 
 @font-face {
   font-family: "Gilroy-Light";
-  src: url("/fonts/SVN-Gilroy-Xlight.otf") format("truetype");
-  font-weight: normal;
+  src: url("/fonts/SVN-Gilroy-Light.otf") format("truetype");
+  font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Gilroy-Thin";
-  src: url("/fonts/SVN-Gilroy-Thin.otf") format("truetype");
-  font-weight: normal;
+  src: url("/fonts/SVN-Gilroy-Medium.ttf") format("truetype");
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -77,15 +77,15 @@ div {
 
 @font-face {
   font-family: "Helvetica-Thin";
-  src: url("/fonts/HelveticaNeue-UltraLight.ttf") format("truetype");
-  font-weight: normal;
+  src: url("/fonts/HelveticaNeue-Light.ttf") format("truetype");
+  font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Helvetica-Light";
   src: url("/fonts/Helvetica-Light.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 700;
   font-style: normal;
 }
 
